# openapi.yaml
@@ -56,7 +56,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:28107/schemas/Config.json
+            - http://127.0.0.1:27323/schemas/Config.json
           format: uri
           readOnly: true
           type: string
@@ -96,6 +96,7 @@ components:
             - dualshock4
             - dualsense
             - dualsenseedge
+            - ns2pro
           type: string
         GyroPassthrough:
           default: true
@@ -145,7 +146,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:28107/schemas/EnforceInputConfig.json
+            - http://127.0.0.1:27323/schemas/EnforceInputConfig.json
           format: uri
           readOnly: true
           type: string
@@ -172,7 +173,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:28107/schemas/ErrorModel.json
+            - http://127.0.0.1:27323/schemas/ErrorModel.json
           format: uri
           readOnly: true
           type: string
@@ -219,7 +220,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:28107/schemas/InitialLaunch.json
+            - http://127.0.0.1:27323/schemas/InitialLaunch.json
           format: uri
           readOnly: true
           type: string
@@ -243,7 +244,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:28107/schemas/OpenConfiguratorArgs.json
+            - http://127.0.0.1:27323/schemas/OpenConfiguratorArgs.json
           format: uri
           readOnly: true
           type: string
@@ -260,7 +261,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:28107/schemas/OverlayChanged.json
+            - http://127.0.0.1:27323/schemas/OverlayChanged.json
           format: uri
           readOnly: true
           type: string
@@ -299,7 +300,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:28107/schemas/ShowHideUI.json
+            - http://127.0.0.1:27323/schemas/ShowHideUI.json
           format: uri
           readOnly: true
           type: string
@@ -332,7 +333,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:28107/schemas/SteamAndCefStatus.json
+            - http://127.0.0.1:27323/schemas/SteamAndCefStatus.json
           format: uri
           readOnly: true
           type: string
@@ -374,7 +375,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:28107/schemas/VIIPERStatus.json
+            - http://127.0.0.1:27323/schemas/VIIPERStatus.json
           format: uri
           readOnly: true
           type: string
@@ -389,7 +390,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:28107/schemas/VersionInfo.json
+            - http://127.0.0.1:27323/schemas/VersionInfo.json
           format: uri
           readOnly: true
           type: string
@@ -439,7 +440,7 @@ components:
       type: object
 info:
   title: SISR API
-  version: dev-snapshot
+  version: dev-snapshot-4-g634fcf6
 openapi: 3.1.0
 paths:
   /api/v1/config:
@@ -778,4 +779,4 @@ paths:
           description: Error
 servers:
   - description: SISR API
-    url: http://127.0.0.1:28107
+    url: http://127.0.0.1:27323
